added validation to login, register and events page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,3 +91,9 @@ button {
   background: #286090;
   opacity: 1;
 }
+
+.content div.input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
