--- a/client/src/pages/Dashboard/dashboard.css
+++ b/client/src/pages/Dashboard/dashboard.css
@@ -10,9 +10,10 @@ ul.events-list {
 ul.events-list li {
   display: flex;
   flex-direction: column;
+  margin-top: 16px;
 }
 
-ul.events-list header {
+ul.events-list li header {
   width: 100%;
   height: 120px;
   background-size: contain;
