created my events route and button

--- a/client/src/pages/Dashboard/dashboard.css
+++ b/client/src/pages/Dashboard/dashboard.css
@@ -27,6 +27,11 @@ ul.events-list strong {
   color: #444;
 }
 
+.filter-panel {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media (max-width: 768px) {
   ul.events-list {
     grid-template-columns: 1fr;
