--- a/client/src/pages/Dashboard/dashboard.css
+++ b/client/src/pages/Dashboard/dashboard.css
@@ -37,6 +37,17 @@ ul.events-list header div {
   flex-direction: row-reverse;
 }
 
+ul.notifications {
+  list-style: none;
+  margin-bottom: 16px;
+  display: flex;
+}
+
+ul.notifications li {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 @media (max-width: 768px) {
   ul.events-list {
     grid-template-columns: 1fr;
