Small visual edits on events creation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,8 @@ body,
 }
 
 body {
-  background: rgba(0, 0, 0, 0.5) url("./assets/background.jpg") no-repeat;
+  background: rgba(0, 0, 0, 0.5) url("./assets/bg.jpg");
   background-size: cover;
-  -webkit-font-smoothing: antialiased !important;
 }
 
 body,
