Moved navbar to top of page, small edits on input form

--- a/client/src/pages/EventsPage/event.css
+++ b/client/src/pages/EventsPage/event.css
@@ -27,10 +27,11 @@ label#thumbnail.has-thumbnail img {
   margin-top: 12px;
 }
 
-.input-group {
-  text-align: center;
-}
-
 #caret {
   width: 155px;
+  margin-bottom: 1rem;
+}
+
+#caret-dropdown {
+  margin-bottom: 1rem;
 }
