--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,8 @@ body,
 }
 
 body {
-  background: rgba(0, 0, 0, 0.5) url("./assets/bg.jpg");
-  background-size: cover;
+  /* background: rgba(0, 0, 0, 0.5) url("./assets/bg.jpg"); */
+  /* background-size: cover; */
 }
 
 body,
@@ -55,7 +55,6 @@ button {
 }
 
 .content button.submit-btn {
-  border: 0;
   border: 2px;
   width: 100%;
   height: 42px;
